; ModuleID = '/home/carl/AnghaBench/linux/fs/crypto/extr_crypto.c_fscrypt_free_bounce_page.c'
source_filename = "/home/carl/AnghaBench/linux/fs/crypto/extr_crypto.c_fscrypt_free_bounce_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@fscrypt_bounce_page_pool = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fscrypt_free_bounce_page(%struct.page* %0) #0 {
  %2 = alloca %struct.page*, align 8
  store %struct.page* %0, %struct.page** %2, align 8
  %3 = load %struct.page*, %struct.page** %2, align 8
  %4 = icmp ne %struct.page* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %14

6:                                                ; preds = %1
  %7 = load %struct.page*, %struct.page** %2, align 8
  %8 = call i32 @set_page_private(%struct.page* %7, i64 0)
  %9 = load %struct.page*, %struct.page** %2, align 8
  %10 = call i32 @ClearPagePrivate(%struct.page* %9)
  %11 = load %struct.page*, %struct.page** %2, align 8
  %12 = load i32, i32* @fscrypt_bounce_page_pool, align 4
  %13 = call i32 @mempool_free(%struct.page* %11, i32 %12)
  br label %14

14:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @set_page_private(%struct.page*, i64) #1

declare dso_local i32 @ClearPagePrivate(%struct.page*) #1

declare dso_local i32 @mempool_free(%struct.page*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
